--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="com.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="promotion.css">
-    <link rel="stylesheet" href="navigation.css">
-    <link rel="stylesheet" href="art_com.css">
-    <link rel="stylesheet" href="art1.css">
-    <link rel="stylesheet" href="art2.css">
-    <link rel="stylesheet" href="art3.css">
-    <link rel="stylesheet" href="art4.css">
-    <link rel="stylesheet" href="art5.css">
-    <link rel="stylesheet" href="floating.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/css/com.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/promotion.css">
+    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/art_com.css">
+    <link rel="stylesheet" href="/css/art1.css">
+    <link rel="stylesheet" href="/css/art2.css">
+    <link rel="stylesheet" href="/css/art3.css">
+    <link rel="stylesheet" href="/css/art4.css">
+    <link rel="stylesheet" href="/css/art5.css">
+    <link rel="stylesheet" href="/css/floating.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="langen.css">
