background color and wording change

--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
     <section class="article promotion" id="1">
         <div class="promotion-wrapper">
             <div class="p-text">
-                <p data-aos="fade-in">
-                    Isang web ng panlipunang relasyon
-                </p>
                 <h5 data-aos="fade-in" data-aos-delay="600">
-                    <b>Society</b> 
+                    <b>Lipunan</b> 
                 </h5>
             </div>
 
@@ -86,10 +83,10 @@
                 <div class="p-box">
                     <div class="p-box-text">
                         <h5>
-                            Society
+                            Lipunan
                         </h5>
                         <p>
-                            Ano ang Society?
+                            Ano ang Lipunan?
                         </p>
                     </div>
                     <div class="p-box-image">
@@ -102,7 +99,7 @@
                             Elements
                         </h5>
                         <p>
-                            Elemento ng Society
+                            Elemento ng Lipunan
                         </p>
                     </div>
                     <div class="p-box-image">
@@ -182,10 +179,10 @@
                 <div class="p-box">
                     <div class="p-box-text">
                         <h5>
-                            Society
+                            Lipunan
                         </h5>
                         <p>
-                            Ano ang Society?
+                            Ano ang Lipunan?
                         </p>
                     </div>
                     <div class="p-box-image">
@@ -198,7 +195,7 @@
                             Elements
                         </h5>
                         <p>
-                            Elemento ng Society
+                            Elemento ng Lipunan
                         </p>
                     </div>
                     <div class="p-box-image">
@@ -285,7 +282,7 @@
             <img src="photos/wis.png" class="a1-image" data-aos="fade-right">
             <div class="a1-text" id="light">
                 <h5 data-aos="fade-right" data-aos-delay="200">
-                    What is Society?
+                    Ano ang Lipunan?
                 </h5>
                 <p data-aos="fade-up">
                     <span>1.</span> Malaking groupo ng mga tao na mayroong <br>
@@ -305,7 +302,7 @@
                 
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        Elements
+                        Elemento
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <b>Social Solidarity</b> - mayroong society kapag may pagkakaisa<br>
@@ -358,7 +355,7 @@
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
                         Pastoral <br>
-                        Society
+                        na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <b>1.</b> Ang mga tao ay nagsimula mag-alaga ng hayop <br>
@@ -383,7 +380,7 @@
                 </div> 
                 <div class="at-text" id="light">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        Horticultural <br> Society
+                        Horticultural <br> na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                        <span>1. </span>umasa sa mga simpleng <br>
@@ -411,7 +408,7 @@
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
                         Agricultural <br>
-                        Society
+                        na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <b>1. </b>Nagsimula nang permanenteng manirahan <br>
@@ -471,7 +468,7 @@
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
                        Industrial <br>
-                       Society
+                       na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <b>1. </b>Saan natuto ang mga tao gumamit <br>
