--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
             </a></li>
             <li class="remoteBtn"><a href="#9">
             </a></li>
-            <li class="remoteBtn"><a href="#10">
-            </a></li>
         </div>
     </div>
 </div>
@@ -96,21 +94,11 @@
                 <div class="p-box">
                     <div class="p-box-text">
                         <h5>
-                            Elements
-                        </h5>
-                        <p>
-                            Elemento ng Lipunan
-                        </p>
-                    </div>
-                    <div class="p-box-image">
-                        <img src="photos/eos.png">
-                    </div>
-                </div>
-                <div class="p-box">
-                    <div class="p-box-text">
-                        <h5>
                             Hunting & Gathering
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/HG.png">
@@ -121,6 +109,9 @@
                         <h5>
                             Pastoral 
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/PS.png">
@@ -131,6 +122,9 @@
                         <h5>
                             Horticultural
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/HS.png">
@@ -141,6 +135,9 @@
                         <h5>
                             Agricultural
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/AS.png">
@@ -151,6 +148,9 @@
                         <h5>
                             Fishing & Maritime
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/F&M.png">
@@ -161,6 +161,9 @@
                         <h5>
                             Industrial
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/Industry.png">
@@ -171,6 +174,9 @@
                         <h5>
                            Post-Industrial
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/PoIn.png">
@@ -192,21 +198,11 @@
                 <div class="p-box">
                     <div class="p-box-text">
                         <h5>
-                            Elements
-                        </h5>
-                        <p>
-                            Elemento ng Lipunan
-                        </p>
-                    </div>
-                    <div class="p-box-image">
-                        <img src="photos/eos.png">
-                    </div>
-                </div>
-                <div class="p-box">
-                    <div class="p-box-text">
-                        <h5>
                             Hunting & Gathering
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/HG.png">
@@ -217,6 +213,9 @@
                         <h5>
                             Pastoral 
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/PS.png">
@@ -227,6 +226,9 @@
                         <h5>
                             Horticultural
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/HS.png">
@@ -237,6 +239,9 @@
                         <h5>
                             Agricultural
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/AS.png">
@@ -247,6 +252,9 @@
                         <h5>
                             Fishing & Maritime
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/F&M.png">
@@ -257,6 +265,9 @@
                         <h5>
                             Industrial
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/Industry.png">
@@ -267,6 +278,9 @@
                         <h5>
                            Post-Industrial
                         </h5>
+                        <p>
+                            Iba’t Ibang Uri ng Lipunan
+                        </p>
                     </div>
                     <div class="p-box-image">
                         <img src="photos/PoIn.png">
@@ -280,16 +294,26 @@
     <section class="article article1" id="2">
         <div class="article-wrapper">
             <img src="photos/wis.png" class="a1-image" data-aos="fade-right">
-            <div class="a1-text" id="light">
-                <h5 data-aos="fade-right" data-aos-delay="200">
-                    Ano ang Lipunan?
-                </h5>
-                <p data-aos="fade-up">
-                    <span>1.</span> Malaking groupo ng mga tao na mayroong <br>
-                    karaniwang paraan ng pamumuhay <br>
-                    <span>2.</span> Maraming relasyong panlipunan <br>
-                    <span>3.</span> "Walang tao ay isang isla"
-                </p>
+            <div id="light">
+                <div class="a1-text">
+                    <h5 data-aos="fade-right" data-aos-delay="200">
+                        Ano ang Lipunan?
+                    </h5>
+                </div>
+                <div class="at-text">
+                    <p data-aos="fade-up" >
+                        <span>•</span> Sa Ingles, itinatawag din itong “society” <br>
+                        <span>•</span> Tumutukoy sa isang pangkat ng mga tao <br>
+                         na nabubuhay nang magkakasama sa isang <br>
+                          partikular na lugar <br>
+                        <span>•</span> Binubuo ng mga mamamayan na may <br>
+                         pare-parehas o iba’t ibang kultura, wika, <br>
+                          paniniwala, at tradisyon <br>
+                          <span>•</span> Ang mga indibidwal ay nagkakaroon <br>
+                           ng ugnayan at interaksyon sa isa’t isa <br>
+
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -332,11 +356,11 @@
                         Gathering
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>1.</span> Unang lipunang binuo nating mga tao <br>
-                        <span>2.</span> Lahat ng nasa paligid ay pwedeng kunin dahil <br>
+                        <span>• </span> Unang lipunang binuo nating mga tao <br>
+                        <span>• </span> Lahat ng nasa paligid ay pwedeng kunin dahil <br>
                           walang nagmamayari <br>
-                        <span>3.</span> Lagi silang gumagalaw o lumilipat <br> para maghanap ng pagkain <br>
-                        <span>4.</span> Ang mga lalaki ay ang naghuhuli <br>
+                        <span>• </span> Lagi silang gumagalaw o lumilipat <br> para maghanap ng pagkain <br>
+                        <span>• </span> Ang mga lalaki ay ang naghuhuli <br>
                         habang ang mga babae ay namimitas
                     </p>
                 </div>
@@ -358,8 +382,8 @@
                         na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <b>1.</b> Ang mga tao ay nagsimula mag-alaga ng hayop <br>
-                        <b>2. </b> Ipinalaki din niia yung mga hayop <br>
+                        <b>• </b> Ang mga tao ay nagsimula mag-alaga ng hayop <br>
+                        <b>• </b> Ipinalaki din niia yung mga hayop <br>
                         para pwede nila gamitin pang transportasyon at <br>
                         paghuli ng mga ibang hayop
                     </p>
@@ -383,9 +407,9 @@
                         Horticultural <br> na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                       <span>1. </span>umasa sa mga simpleng <br>
+                       <span>• </span>umasa sa mga simpleng <br>
                         kasangkapan sa paggawa ng pagkain <br>
-                        <span>2. </span> Pagtatanim ng mga pagkain <br>
+                        <span>• </span> Pagtatanim ng mga pagkain <br>
                          sa paraan ng HINDI paggamit ng kahit ano <br>
                           mang materyal na bagay o hayop 
 
@@ -411,13 +435,13 @@
                         na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <b>1. </b>Nagsimula nang permanenteng manirahan <br>
+                        <b>• </b>Nagsimula nang permanenteng manirahan <br>
                          ang mga tao sa mga lugar <br>
-                         <b>2. </b>Pwede pala tayong magtanim, <br>
+                         <b>• </b>Pwede pala tayong magtanim, <br>
                           pwede natin alagaan yung mga pananim, <br>
                             at kapag tumubo sila pwede natin <br>
                             silang kainin <br>
-                        <b>3. </b> kung sino yung nagtanim at nagalaga, <br>
+                        <b>• </b> kung sino yung nagtanim at nagalaga, <br>
                          maaari siya rin ang may hawak ng “food supply” <br>
                           sa kanilang society kaya dapat siya ang nakakataas <br>
                         dahil parang siya yung nagpapakain sa mga <br>
@@ -445,12 +469,12 @@
                          Maritime
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>1. </span>Nangyari kapag yung society <br>
+                        <span>• </span>Nangyari kapag yung society <br>
                          ay malapit sa tubig <br>
-                         <span>2. </span>Ginamit yung dagat para mangisda <br>
+                         <span>• </span>Ginamit yung dagat para mangisda <br>
                           at mag dala ng mga bagay-bagay sa isang lugar <br>
                            patungo sa isa pa. <br>
-                        <span>3. </span>Nagkaroon ng pagkakalakal
+                        <span>• </span>Nagkaroon ng pagkakalakal
                     </p>
                 </div>
             </div>
@@ -471,13 +495,13 @@
                        na Lipunan
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <b>1. </b>Saan natuto ang mga tao gumamit <br>
+                        <b>• </b>Saan natuto ang mga tao gumamit <br>
                          ng mga machines to produce goods at services <br>
-                         <b>2. </b>Nagsimula ang urbanisasyon <br>
-                         <b>3. </b>paglipat ng mga <br>
+                         <b>• </b>Nagsimula ang urbanisasyon <br>
+                         <b>• </b>paglipat ng mga <br>
                           probinsyanong/probinsyanang Pilipino <br>
                            sa Maynila <br>
-                           <b>4. </b>Lumipat sila kasi mahirap ang buhay <br>
+                           <b>• </b>Lumipat sila kasi mahirap ang buhay <br>
                             kung ang society mo ay agricultural/fishing at <br>
                              maritime dahil kung nagkaroon ng taggutom, tagtuyot, <br>
                             mawawalan ka ng kabuhayan (pera) hindi tulad kung <br>
@@ -491,30 +515,6 @@
             <div class="a2-image">
                 <img src="photos/indus_element.png" class="a2-1" data-aos="fade-up">
             </div>
-        </div>
-    </section>
-    <section class="article article1 article5" id="10">
-        <div class="article-wrapper">
-            <div class="article-title">
-                <div class="at-image" data-aos="zoom-in" data-aos-duration="400">
-                    <img src="photos/PoIn.png">
-                </div> 
-                <div class="at-text" id="light">
-                    <h5 data-aos="fade-right" data-aos-delay="200">
-                        Post- <br>
-                        Industrial
-                    </h5>
-                    <p data-aos="fade-right" data-aos-delay="400">
-                        <span>1. </span>Kasalukuyang lipunan <br>
-                        <span>2. </span>Kaalaman ang kailangan <br>
-                        <span>3. </span>Ibinebenta natin ay ang kaalaman <br>
-                    </p>
-                </div>
-            </div>
-            <div class="a2-image">
-                <img src="photos/poin_element.png" class="a2-1" data-aos="fade-up">
-            </div>
-             
         </div>
     </section>
 </main>
