edited until horticultural soc.

--- a/index.html
+++ b/index.html
@@ -319,28 +319,12 @@
     </section>
     <section class="article article2" id="3">
         <div class="article-wrapper">
-            <div class="article-title">
-                <div class="at-image" data-aos="zoom-in" data-aos-duration="400">
-                    <img src="photos/eos.png">
-                </div>
-                
-                <div class="at-text" id="dark">
+            <div class="article-title">                
+                <div class="a1-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        Elemento
+                        <center>Elemento</center>
                     </h5>
-                    <p data-aos="fade-right" data-aos-delay="400">
-                        <b>Social Solidarity</b> - mayroong society kapag may pagkakaisa<br>
-                        <b>Shared Identity & Language</b> - pare-parehas na pagkakatao <br>
-                        <b>Common Language</b> - pare-parehas ng wikang sinasalita <br>
-                        <b>Population</b> - kailangang mapunan muli ang lipunan <br>
-                        <b>Geography</b> - kung saan nakatira ang kanilang society <br>
-                        <b>Political, Economic, & Social Organization</b> - ang society ay <br>
-                         mayroong pamahalaan, institusyon, sa pamilihan
-                    </p>
                 </div>
-            </div>
-            <div class="a2-image">
-                <img src="photos/eos_element.png" class="a2-1" data-aos="fade-up">
             </div>
         </div>
     </section>
@@ -352,16 +336,17 @@
                 </div>    
                 <div class="at-text" id="light">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        Hunting and <br/>
-                        Gathering
+                        Pangagaso at <br/>
+                        Pagtitipon
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>• </span> Unang lipunang binuo nating mga tao <br>
-                        <span>• </span> Lahat ng nasa paligid ay pwedeng kunin dahil <br>
-                          walang nagmamayari <br>
-                        <span>• </span> Lagi silang gumagalaw o lumilipat <br> para maghanap ng pagkain <br>
-                        <span>• </span> Ang mga lalaki ay ang naghuhuli <br>
-                        habang ang mga babae ay namimitas
+                        <span>• </span> Pinakaunang anyo ng lipunan na nabuo ng mga tao <br>
+                        <span>• </span> Ang mga tao ay walang sariling permanentong tirahan— <br>
+                        sila ay palipat-lipat depende kung saan sila makakahanap<br>
+                         ng pagkain at tubig <br>
+                        <span>• </span> Lahat ng bagay dito ay pangkaraniwan o <br>
+                        pwede ninyong ipunin dahil walang nagmamayari <br>
+
                     </p>
                 </div>
             </div>
@@ -378,8 +363,7 @@
                 </div> 
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        Pastoral <br>
-                        na Lipunan
+                        Mala-bukid
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <b>• </b> Ang mga tao ay nagsimula mag-alaga ng hayop <br>
@@ -515,6 +499,30 @@
             <div class="a2-image">
                 <img src="photos/indus_element.png" class="a2-1" data-aos="fade-up">
             </div>
+        </div>
+    </section>
+    <section class="article article1 article5" id="10">
+        <div class="article-wrapper">
+            <div class="article-title">
+                <div class="at-image" data-aos="zoom-in" data-aos-duration="400">
+                    <img src="photos/PoIn.png">
+                </div> 
+                <div class="at-text" id="light">
+                    <h5 data-aos="fade-right" data-aos-delay="200">
+                        Post- <br>
+                        Industrial
+                    </h5>
+                    <p data-aos="fade-right" data-aos-delay="400">
+                        <span>• </span>Kasalukuyang lipunan <br>
+                        <span>• </span>Kaalaman ang kailangan <br>
+                        <span>• </span>Ibinebenta natin ay ang kaalaman <br>
+                    </p>
+                </div>
+            </div>
+            <div class="a2-image">
+                <img src="photos/poin_element.png" class="a2-1" data-aos="fade-up">
+            </div>
+             
         </div>
     </section>
 </main>
