--- a/index.html
+++ b/index.html
@@ -455,12 +455,14 @@
                         at Pandagat
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>• </span>Nangyari kapag yung society <br>
-                         ay malapit sa tubig <br>
-                         <span>• </span>Ginamit yung dagat para mangisda <br>
-                          at mag dala ng mga bagay-bagay sa isang lugar <br>
-                           patungo sa isa pa. <br>
-                        <span>• </span>Nagkaroon ng pagkakalakal
+                        <span>• </span>Napagtanto ng mga tao na pwede nilang <br>
+                        gamitin ang dagat (o kung ano mang <br> anyong tubig) 
+                        para mangisda<br>
+                         <span>• </span>Hindi lang pangingisda ngunit, <br>
+                         pwede rin nila itong gamitin upang <br>
+                         makipagkalakalan sa iba pang lipunan<br>
+                        <span>• </span>Madalas ang mga lipunang ito <br>
+                        ay nakatira malapit sa anyong tubig <br>
                     </p>
                 </div>
             </div>
@@ -477,24 +479,18 @@
                 </div>    
                 <div class="at-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                       Industrial <br>
-                       na Lipunan
+                        Industriyal
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <b>• </b>Saan natuto ang mga tao gumamit <br>
-                         ng mga machines to produce goods at services <br>
-                         <b>• </b>Nagsimula ang urbanisasyon <br>
-                         <b>• </b>paglipat ng mga <br>
-                          probinsyanong/probinsyanang Pilipino <br>
-                           sa Maynila <br>
-                           <b>• </b>Lumipat sila kasi mahirap ang buhay <br>
-                            kung ang society mo ay agricultural/fishing at <br>
-                             maritime dahil kung nagkaroon ng taggutom, tagtuyot, <br>
-                            mawawalan ka ng kabuhayan (pera) hindi tulad kung <br>
-                             nasa urban area ang tao <br> 
-                             na mayroong maaasahang kita mula sa mga pabrika <br>
-
-
+                        <b>• </b>Nangyari noong 1800s <br>
+                        <b>• </b>Rebolusyong Industriyal: panahon sa ating <br>
+                        kasaysayan kung saan natutuhan ng mga tao <br>
+                        kung paano gumamit ng mga makina para <br>
+                        makagawa ng mga produkto at serbisyo. <br>
+                        <b>• </b>Binago nito ang lipunan dahil dito naimbento ang <br>
+                        tinatawag na “middle class” (mga hindi sobrang <br>
+                        yaman at hindi sobrang hirap) 
+                        <br>
                     </p>
                 </div>
             </div>
@@ -512,12 +508,16 @@
                 <div class="at-text" id="light">
                     <h5 data-aos="fade-right" data-aos-delay="200">
                         Post- <br>
-                        Industrial
+                        Industrial <br>
+                        Society
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>• </span>Kasalukuyang lipunan <br>
-                        <span>• </span>Kaalaman ang kailangan <br>
-                        <span>• </span>Ibinebenta natin ay ang kaalaman <br>
+                        <span>• </span>Ating kasalukuyang lipunan <br>
+                        <span>• </span>Ang kaalaman ang pinagkakalakalan <br>
+                        <span>• </span>Kung dati ay kakayahan ang ating<br>
+                        ibinebenta, ngayon ay ang ating kaalaman <br>
+                        <span>• </span>Halimbawa ay ang pagtatapos ng pag-aaral upang <br>
+                        maging doktor at magsilbi sa lipunan <br>
                     </p>
                 </div>
             </div>
