fixed padding issue

--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
             </a></li>
             <li class="remoteBtn"><a href="#2">
             </a></li>
-            <li class="remoteBtn"><a href="#3">
-            </a></li>
             <li class="remoteBtn"><a href="#4">
             </a></li>
             <li class="remoteBtn"><a href="#5">
@@ -317,12 +315,12 @@
             </div>
         </div>
     </section>
-    <section class="article article2" id="3">
+    <section class="article article2">
         <div class="article-wrapper">
             <div class="article-title">                
                 <div class="a1-text" id="dark">
                     <h5 data-aos="fade-right" data-aos-delay="200">
-                        <center>Elemento</center>
+                        <center>Iba’t Ibang Uri ng Lipunan</center>
                     </h5>
                 </div>
             </div>
@@ -516,8 +514,9 @@
                         <span>• </span>Ang kaalaman ang pinagkakalakalan <br>
                         <span>• </span>Kung dati ay kakayahan ang ating<br>
                         ibinebenta, ngayon ay ang ating kaalaman <br>
-                        <span>• </span>Halimbawa ay ang pagtatapos ng pag-aaral upang <br>
-                        maging doktor at magsilbi sa lipunan <br>
+                        <span>• </span>Halimbawa ay ang pagtatapos ng  <br>
+                        pag-aaral upang maging doktor at magsilbi<br>
+                        sa lipunan <br>
                     </p>
                 </div>
             </div>
