--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <main>
     <!--Title-->
-    <section class="article promotion" id="1">
+    <section class="article promotion back" id="1">
         <div class="promotion-wrapper">
             <div class="p-text">
                 <h5 data-aos="fade-in" data-aos-delay="600">
