--- a/index.html
+++ b/index.html
@@ -506,8 +506,7 @@
                 <div class="at-text" id="light">
                     <h5 data-aos="fade-right" data-aos-delay="200">
                         Post- <br>
-                        Industrial <br>
-                        Society
+                        Industriyal <br>
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
                         <span>• </span>Ating kasalukuyang lipunan <br>
