--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
                         Pagtitipon
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <span>• </span> Pinakaunang anyo ng lipunan na nabuo <br>
+                        <span>• </span>Pinakaunang anyo ng lipunan na nabuo <br>
                         ng mga tao <br>
-                        <span>• </span> Ang mga tao ay walang sariling permanentong <br> 
+                        <span>• </span>Ang mga tao ay walang sariling permanentong <br> 
                         tirahan— sila ay palipat-lipat depende kung saan sila <br>
                         makakahanap ng pagkain at tubig <br>
-                        <span>• </span> Lahat ng bagay dito ay pangkaraniwan o <br>
+                        <span>• </span>Lahat ng bagay dito ay pangkaraniwan o <br>
                         pwede ninyong ipunin dahil walang nagmamayari <br>
 
                     </p>
@@ -365,9 +365,9 @@
                         Mala-bukid
                     </h5>
                     <p data-aos="fade-right" data-aos-delay="400">
-                        <b>•</b> napagtanto ng mga tao na pwede <br>
+                        <b>•</b>Napagtanto ng mga tao na pwede <br>
                         silang magalaga ng mga hayop <br>
-                        <b>•</b> Imbis na mangaso ay pwede silang <br>
+                        <b>•</b>Imbis na mangaso ay pwede silang <br>
                         mag-alaga, at saka ay kakainin kapag pinalaki na <br>
                         <b>• </b>Walang pa ring permanenteng tirahan <br>
                         <b>• </b>Hindi lang pagkain ang pakay nila upang <br>
@@ -425,7 +425,7 @@
                         para maghanap ng pagkain, pwede nilang alagaan <br>
                         ang kanilang mga tanim at kapag tumubo ay pwede<br>
                         nila itong kainin <br>
-                        <b>• </b> nabuo ang tinatawag na <i>“social stratification” </i>— <br>
+                        <b>• </b>Nabuo ang tinatawag na <i>“social stratification” </i>— <br>
                         kung saan ay kung sino man ang nagtanim at nagalaga <br>
                         (ng mga produkto) ay maaaring siya rin ang may hawak <br>
                         ng supay ng pagkain sa kanilang lipunan, kaya dapat <br>
